# poker-server-backend

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  environment.yml  init.py  migrate.sh  pyproject.toml  requirements.txt  requirements_linux.txt  settings.py
bots/random/: agent.py
bots/random/client/: controller.py
configurations/dev/: settings.py
configurations/docker/: settings.py
configurations/prod/: settings.py
coordinator/: admin.py  config.py  models.py  services.py
coordinator/games/: kuhn_lobby.py
coordinator/kuhn/: kuhn_coordinator.py  kuhn_game.py
coordinator/migrations/: 0001_initial.py
coordinator/utilities/: card.py  logger.py
deploy/: database_configmap_template.yaml  hello.yaml  server.yaml
kubecluster/: Makefile  README
kubecluster/poker/: namespace.yaml
pages/: admin.py  models.py  views.py
pages/templates/: game.html  leaderboard.html  tournament.html
proto/game/: game_pb2.py  game_pb2_grpc.py
