[tool.poetry]
name = "poker-server-backend"
version = "0.0.1"
description = "Poker bot server backend for 5AR0"
authors = ["Mykola Lukashchuk <nikola.lukashuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.1.4"
djangogrpcframework = "0.2"
django-mathfilters = "1.0.0"
django-log-viewer = "1.1.4"

matplotlib = "^3.9.2"
protobuf = "^3.20.1"
psycopg2 = "^2.9.9"
sqlparse = "^0.5.1"
urllib3 = "^2.2.2"
grpcio = "^1.24.3"
grpcio-tools = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
